--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -35,29 +35,29 @@
                                     <% if(Studentresult[i].infoPrePostTest != undefined){ %>
                                 <% } else{ %>  
                                     <span class="quiz">Algorithms and Flowcharts</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Algorithms_and_Flowcharts %> 
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Algorithms_and_Flowcharts %>
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Algorithms_and_Flowcharts %> --- Total:<%=Studentresult[i].pre1lv1+Studentresult[i].pre1lv2+Studentresult[i].pre1lv3+Studentresult[i].pre1lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Algorithms_and_Flowcharts %> --- Total:<%=Studentresult[i].post1lv1+Studentresult[i].post1lv2+Studentresult[i].post1lv3+Studentresult[i].post1lv4 %>
                                     <span class="quiz">Datatype and Variable</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Datatype_and_Variable %>
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Datatype_and_Variable %>
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Datatype_and_Variable %> --- Total:<%=Studentresult[i].pre2lv1+Studentresult[i].pre2lv2+Studentresult[i].pre2lv3+Studentresult[i].pre2lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Datatype_and_Variable %>  --- Total:<%=Studentresult[i].post2lv1+Studentresult[i].post2lv2+Studentresult[i].post2lv3+Studentresult[i].post2lv4 %>
                                     <span class="quiz">Input and Output</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Input_and_Output %>
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Input_and_Output %>  
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Input_and_Output %> --- Total:<%=Studentresult[i].pre3lv1+Studentresult[i].pre3lv2+Studentresult[i].pre3lv3+Studentresult[i].pre3lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Input_and_Output %> --- Total:<%=Studentresult[i].post3lv1+Studentresult[i].post3lv2+Studentresult[i].post3lv3+Studentresult[i].post3lv4 %>
                                     <span class="quiz">Operators and Expressions</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Operators_and_Expressions %> 
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Operators_and_Expressions %> 
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Operators_and_Expressions %> --- Total:<%=Studentresult[i].pre4lv1+Studentresult[i].pre4lv2+Studentresult[i].pre4lv3+Studentresult[i].pre4lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Operators_and_Expressions %> --- Total:<%=Studentresult[i].post4lv1+Studentresult[i].post4lv2+Studentresult[i].post4lv3+Studentresult[i].post4lv4 %>
                                     <span class="quiz">Selection Statements </span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Selection_Statements %>
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Selection_Statements %> 
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Selection_Statements %> --- Total:<%=Studentresult[i].pre5lv1+Studentresult[i].pre5lv2+Studentresult[i].pre5lv3+Studentresult[i].pre5lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Selection_Statements %> --- Total:<%=Studentresult[i].post5lv1+Studentresult[i].post5lv2+Studentresult[i].post5lv3+Studentresult[i].post5lv4 %>
                                     <span class="quiz">Loop Statements</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Loop_Statements %>
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Loop_Statements %>
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Loop_Statements %> --- Total:<%=Studentresult[i].pre6lv1+Studentresult[i].pre6lv2+Studentresult[i].pre6lv3+Studentresult[i].pre6lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Loop_Statements %> --- Total:<%=Studentresult[i].post6lv1+Studentresult[i].post6lv2+Studentresult[i].post6lv3+Studentresult[i].post6lv4 %>
                                     <span class="quiz">Arrays and Strings</span>
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Arrays_and_Strings %>
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Arrays_and_Strings %>
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Arrays_and_Strings %> --- Total:<%=Studentresult[i].pre7lv1+Studentresult[i].pre7lv2+Studentresult[i].pre7lv3+Studentresult[i].pre7lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Arrays_and_Strings %> --- Total:<%=Studentresult[i].post7lv1+Studentresult[i].post7lv2+Studentresult[i].post7lv3+Studentresult[i].post7lv4 %>
                                     <span class="quiz">Functions</span> 
-                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Functions %> 
-                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Functions %> 
+                                    <br> &nbsp &nbspPretest | <%=Studentresult[i].pre_Functions %> --- Total:<%=Studentresult[i].pre8lv1+Studentresult[i].pre8lv2+Studentresult[i].pre8lv3+Studentresult[i].pre8lv4 %>
+                                    <br> &nbsp &nbspPosttest | <%=Studentresult[i].post_Functions %> --- Total:<%=Studentresult[i].post8lv1+Studentresult[i].post8lv2+Studentresult[i].post8lv3+Studentresult[i].post8lv4 %>
                                 <% } %>
                             </td>
                                 <td>
